# Travel-Agent

./: pyproject.toml
backend/: config.py  main.py  utils.py
backend/agent/: models.py  nodes.py  state.py
backend/agent/nodes/: plan_execution.py  response.py  trip_analysis.py
backend/routers/: ping.py
backend/schemas/: health.py
backend/services/duffel/: client.py  test_client.py
