[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.8",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]
